# shareboard

./: LICENSE  README.md
demo/: .env-dev  .gitignore  constants.py  main.py  pyproject.toml
frontend/: .gitignore  dev.env.local  next.config.js  package.json  tailwind.config.js
frontend/src/: middleware.tsx
frontend/src/app/: emotion.tsx  footer.tsx  globals.css  head.tsx  layout.tsx  navbar.tsx  page.tsx  preflight.css  shared.tsx
frontend/src/app/[link]/: page.tsx
frontend/src/app/auth/: page.tsx
frontend/src/app/dashboard/: databases.tsx  page.tsx
frontend/src/components/: shared.tsx  supabase-listener.tsx  supabase-provider.tsx
frontend/src/components/figures/: bar.tsx
frontend/src/db/general_links/: delete.ts  insert.ts  select.ts  type.ts
frontend/src/db/users/: select.ts  type.ts
frontend/src/pages/api/: get_tables.tsx  openai.tsx  run_query.tsx
frontend/src/utils/: supabase-browser.tsx  supabase-server.tsx  utils.tsx
